Permanently fix overflow issues in the titlebar

--- a/src/css/window/titlebar.css
+++ b/src/css/window/titlebar.css
@@ -25,7 +25,11 @@ div.window > div.body div.titlebar.custom div.window-title {
   align-items: center;
   gap: 10px;
   line-height: 18px;
-  max-width: 70%;
+  width: 0;
+  flex-grow: 1;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 div.window > div.titlebar div.window-title > img,
